# superscript

./: ProjectManagement.md  README.md  pyproject.toml  requirements.txt
superscript/: __main__.py  main.py
superscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
superscript/helper/: configuration.py  constants.py  fshandling.py  printing.py  versioning.py
tests/: test_main.py
