[tool.poetry]
name = "superscript"
version = "0.1.0"
description = "Dynamical software components manager."
authors = ["Alexander Küppers <pentesting.laboratories@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
superscript = "superscript.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.1"}
pyyaml = "^5.3.1"
GitPython = "^3.1.7"
rich = "^4.2.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
