[tool.poetry]
name = "superscript"
version = "0.1.1"
description = "Dynamical software components manager."
authors = ["toxicphreAK <pentesting.laboratories@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Shells",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]
keywords = ["packaging", "software", "tools", "collection"]

[tool.poetry.urls]
homepage = "https://github.com/toxicphreAK/superscript"
repository = "https://github.com/toxicphreAK/superscript"
documentation = "https://github.com/toxicphreAK/superscript"

[tool.poetry.scripts]
superscript = "superscript.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.1"}
pyyaml = "^5.3.1"
GitPython = "^3.1.7"
rich = "^4.2.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
