[tool.poetry]
name = "superscript"
version = "0.1.1"
description = "Dynamical software components manager."
authors = ["toxicphreAK <pentesting.laboratories@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Shells",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]
keywords = ["packaging", "software", "tools", "collection"]

[tool.poetry.urls]
homepage = "https://github.com/toxicphreAK/superscript"
repository = "https://github.com/toxicphreAK/superscript"
documentation = "https://github.com/toxicphreAK/superscript"

[tool.poetry.scripts]
superscript = "superscript.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
GitPython = "^3.1.7"
rich = "^12.6.0"
requests = "^2.24.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
